<resources>
    <string name="app_name">RodentMobile</string>
    <string name="title_activity_library">LibraryActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_cloud">Cloud</string>
    <string name="action_new">New</string>
    <string name="title_activity_drawing">DrawingActivity</string>

    <string name="context_menu_library_delete">Delete</string>
    <string name="title_activity_manual_controller">ManualControllerActivity</string>
    <string name="title_activity_broadcast">Rodent Broadcaster</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_web_loader">Rodent Online</string>

    <!-- General strings -->
    <string name="btnOk">Ok</string>
    <string name="btnCancel">Cancel</string>

    <!-- Strings related to Settings -->
    <string name="pref_header_connection">Connection settings</string>
    <string name="pref_title_ip">Rodent IP Address</string>
    <string name="pref_default_ip">192.168.x.xx</string>
    <string name="pref_title_port">Rodent Port</string>
    <string name="pref_default_port">0000</string>
    <string name="pref_title_api">Rodent Online Module API Address</string>

    <!-- Strings related to files -->
    <string name="default_save_directory">/rodent/</string>
    <string name="default_file_type">.rodent</string>

    <!-- Strings related to connections -->
    <string name="online_api_address">http://46.101.165.251/rodentonline/json/</string>
    <string name="relative_replaced_address">./../json/</string>

    <!-- Strings related to library -->
    <string name="lib_cannot_open_file">Can\'t open file.</string>
    <string name="lib_title_new_file_dialog">New file</string>
    <string name="lib_placeholder_file_name">Filename</string>
    <string name="lib_placeholder_depth">Default engrave depth</string>
    <string name="lib_placeholder_paper_width">Engraving width</string>
    <string name="lib_placeholder_paper_height">Engraving height</string>
    <string name="lib_new_file_invalid_input">Invalid input.</string>
    <string name="thumbnail">image</string>

    <!-- Strings related to drawing -->
    <string name="drawing_notification_saving">Saving. Please wait.</string>
    <string name="drawing_notification_saved">Saved.</string>
    <string name="drawing_notification_save_failed">Save failed.</string>

    <string name="drawing_select_element">Select element first.</string>
    <string name="drawing_copy_action_failure">Copy action failed.</string>

    <string name="drawing_title_save_changes">Save changes?</string>
    <string name="drawing_changed_btnSave">Save</string>
    <string name="drawing_changed_btnDiscard">Discard</string>

    <string name="drawing_title_shape_depth_selector">Shape depth</string>

    <!-- TextTool layout -->
    <string name="textsize_default">32</string>
    <string name="textsize_hint">Text size</string>
    <string name="text_hint">Enter text</string>

    <!-- Strings related to web load activity -->
    <string name="web_error_url_syntax">The API url error occurred.</string>
    <string name="web_synced_succesfully">Loaded</string>
    <string name="web_sync_failed">Failed to load data.</string>
    <string name="web_invalid_gcode">Invalid GCode found.</string>
    <string name="web_file_save_failed">Failed to save file.</string>

    <!-- Strings related to the broadcast activity -->
    <string name="filename_placeholder">File: %1$s</string>
    <string name="line_amount_placeholder">Lines: %1$d</string>
    <string name="bound_max_value_placeholder">Max values: X%1$.2f Y%2$.2f Z%3$.2f</string>
    <string name="bound_min_value_placeholder">Min values: X%1$.2f Y%2$.2f Z%3$.2f</string>

    <string name="current_x_placeholder">X%1$.2f</string>
    <string name="current_y_placeholder">Y%1$.2f</string>
    <string name="current_z_placeholder">Z%1$.2f</string>

    <string name="btn_start_text">Start</string>
    <string name="btn_stop_text">Stop</string>
    <string name="btn_reset_text">Zero</string>

    <string name="brdcast_progress_text">Progress</string>

    <string name="brdcast_invalid_uri">Invalid socket url.</string>
    <string name="brdcast_connection_opened">Connected</string>
    <string name="brdcast_connection_closed">Disconnected</string>
    <string name="brdcast_connection_error">Error occurred with connection.</string>

    <string name="brdcast_menu_connection_status">Connection</string>
    <string name="brdcast_menu_settings">Settings</string>
    <string name="brdcast_menu_controller">Controller</string>

    <!-- Machine controller dialog -->
    <string name="ctrl_dialog_title">Rodent machine control</string>

    <string name="ctrl_dialog_spindle_speed_title">Spindle speed: %1$d</string>
    <string name="ctrl_dialog_light_red_channel_title">Red channel: %1$d</string>
    <string name="ctrl_dialog_light_green_channel_title">Green channel: %1$d</string>
    <string name="ctrl_dialog_light_blue_channel_title">Blue channel: %1$d</string>

    <string name="error_socket_not_connected">No machine connection.</string>

    <string name="ctrl_dialob_btn_back">Back</string>

</resources>
