<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="ip_address"
        android:title="@string/pref_title_ip"
        android:defaultValue="@string/pref_default_ip"
        android:selectAllOnFocus="true"
        android:inputType="numberDecimal"
        android:digits="0123456789."
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="port"
        android:title="@string/pref_title_port"
        android:defaultValue="@string/pref_default_port"
        android:selectAllOnFocus="true"
        android:inputType="numberDecimal"
        android:digits="0123456789."
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="online_api_address"
        android:title="@string/pref_title_api"
        android:defaultValue="@string/online_api_address"
        android:selectAllOnFocus="true"
        android:inputType="textNoSuggestions"
        android:singleLine="true"
        android:maxLines="1" />

</PreferenceScreen>
