<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/spindle_speed_view"
            android:text="@string/ctrl_dialog_spindle_speed_title" />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:id="@+id/seekBar_spindle_speed"
            android:max="10" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/light_red_channel_view"
            android:text="@string/ctrl_dialog_light_red_channel_title" />

        <SeekBar
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/seekBar_light_red_channel"
            android:max="10" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/light_green_channel_view"
            android:text="@string/ctrl_dialog_light_green_channel_title" />

        <SeekBar
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/seekBar_light_green_channel"
            android:max="10" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/light_blue_channel_view"
            android:text="@string/ctrl_dialog_light_blue_channel_title" />

        <SeekBar
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/seekBar_light_blue_channel"
            android:max="10" />

    </LinearLayout>


</LinearLayout>